# HMPC-for-Flying-Robots

./: README.md
dynacube/: CMakeLists.txt  package.xml
dynacube/data/: controldynacube.txt  planningdynacube.txt  positiondynacube.txt  velodynacube.txt
dynacube/launch/: dynacube.launch
dynacube/src/: dynacubecontroller.cpp  dynacubepath.cpp
dynacube/urdf/: cubedrone.urdf.xacro  obstacle.xacro
dynacube/worlds/: obstacles.world
dynauav/: CMakeLists.txt  package.xml
dynauav/data/: controldynauav.txt  planningdynauav.txt  positiondynauav.txt  velodynauav.txt
dynauav/launch/: dynauav.launch
dynauav/src/: dynauavcontroller.cpp  dynauavpath.cpp  dynauavplugin.cc  obmovement.cpp
dynauav/urdf/: obstacle.xacro  uav_drone.urdf.xacro
dynauav/worlds/: obstacles.world
images/: abc.txt
mpccube/: CMakeLists.txt  package.xml
mpccube/data/: controlcube.txt  planningcube.txt  positioncube.txt
mpccube/launch/: gazebo.launch  obcube.launch
mpccube/src/: mpccubecontroller.cpp  mpccubeplugin.cc  pathplanningcube.cpp
mpccube/urdf/: cubedrone.urdf.xacro
mpccube/worlds/: obstacles.world
optiuav/: CMakeLists.txt  abs.s  package.xml
optiuav/data/: controluav.txt  planninguav.txt  positionuav.txt
optiuav/launch/: gazebo.launch  obuav.launch
optiuav/src/: cppdrone_plugin.cc  mpccontroller.cpp  pathplanning.cpp
optiuav/urdf/: uav_drone.urdf.xacro
optiuav/worlds/: default.world  obstacles.world
